fix(style): GCS tables showing scrollbar if very small

--- a/src/styles/gcs-sheet/_base.scss
+++ b/src/styles/gcs-sheet/_base.scss
@@ -316,7 +316,7 @@ body {
   }
 
   td {
-    overflow-x: hidden;
+    overflow-x: clip;
   }
 
   td,
